--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -260,6 +260,7 @@ readonly.summary.xenograft=Number of samples with xenograft data:
 readonly.summary.antibodyTargets=The following antibody targets:
 readonly.summary.hiddenSamples=Number of stopped samples (can be viewed on the previous page):
 readonly.summary.withdrawn=Number of withdrawn samples from OTP:
+readonly.summary.additionalHeaders=The following additional headers:
 readonly.summary.onHold=Your submission is currently set ON_HOLD by the ODCF service team due to required adjustments. \
   You will be notified via email when further editing and/or finally submitting of your submission is possible.
 readonly.info.usesRequestedValues=Your submission contains data which we have to check first. Therefore, your submission cannot be finished yet. \
@@ -380,7 +381,7 @@ feedback.overview=Feedback Overview
 feedback.name=User
 feedback.date=Date
 feedback.rating=Rating
-feedback.sampleCount=Number of Samples
+feedback.sampleCount=Samples
 feedback.average=Current Feedback Average:
 feedback.averageToolTip=Average of the last 25 feedback ratings
 feedback.happy=HAPPY
