--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -106,6 +106,7 @@ details.newProject=Do you want to set up a new ODCF project? Please follow the l
 details.otpProjectForm=OTP project form
 details.project=Please have a look in OTP to check if the metadata (e.g. PID, sample type) is consistent with the already registered metadata of this project.
 details.projectConfig=More information concerning the settings of your project (e.g. species with strain) can be found here:
+details.similarPidsHeader=Similar PIDs found in OTP
 
 csvImport.editRows=edit rows
 csvImport.hideSample=sample-related metadata
@@ -129,7 +130,10 @@ validator.table.title.libraryLayout=Single or Paired End Sequencing
 validator.table.title.otpSeqType=Type in your sequencing type and either choose an option from the dropdown menu (e.g. RNA, WHOLE_GENOME, EXON etc.) or \
   click on "Request" to request a value not in the list of options.
 validator.table.title.singleCell=Check whether your sample is from a single cell experiment
-validator.table.title.libraryPreparationKit=Kit that was used in the lab to prepare the library
+validator.table.title.libraryPreparationKit=Kit that was used in the lab to prepare the library.<br />\
+  For RNA, WGBS and Chip the adapter sequence that will be used to trim your data is also shown in the mouseover. \
+  Please check if the data fits with the library preparation / index kit you have used. \
+  The "Star adapter" is used for RNA data and the "Trimmomatic adapter" is used for WGBS and Chip data. If the adapter sequence doesn't fit, you need to register a new kit.
 validator.table.title.indexType=Index kit that was used during library preparation
 validator.table.title.tagmentationLibrary=Number of parallel tagmentation-type library
 validator.table.title.antibody=Store further information for the antibody itself used during immunoprecipitation (e.g. catalogue number)
@@ -311,14 +315,11 @@ seqType.basicSeqType=Basic Sequencing Type
 seqType.seqType=Sequencing Types
 seqType.name=Name
 seqType.ilseNames=ILSe Names
-seqType.needAntibodyTarget=Needs Antibody Target
-seqType.needLibPrepKit=Needs Lib Prep Kit
 seqType.antibodySequencing=Antibody sequencing
 seqType.singleCell=Single Cell
 seqType.tagmentation=Tagmentation
-seqType.isDisplayedForUser=Is displayed for user
-seqType.changeIlseName=Adapt ILSe Name for
-seqType.changeInfo=Please enter the new ILSe Name. If there are multiple names please separate them with a semicolon (';').
+seqType.additionalOptions=Please choose the additional metadata of the seqType
+seqType.seqTypeInfos=SeqType additional information
 
 seqTech.cardHeader=Add Sequencing Technology
 seqTech.validationLevel=Validation level
@@ -444,6 +445,7 @@ project.overview.sizeAnalysis=Size analysis folder
 project.overview.closedProject=This project is closed
 project.overview.sizeStorage=Size of the organizational unit-wide analysis directory (<code>/omics/groups/{1}</code>): <span class="badge badge-dark">{0}</span>
 
+csvImport.importing=Submission is importing at the moment, please come back later
 csvImport.fileAlreadyExists=Import failed, because md5 sum is already registered in this submission
 csvImport.md5AlreadyExists=Import paused, because [<MD5_COUNT>] md5 sums were found in one or more different submissions.
 csvImport.duplicatedMd5Info=Please choose how to proceed:<br>\
