--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -233,10 +233,9 @@ readonly.reopenSubmission=Reopen submission
 readonly.submitFinally=Please process my submission
 readonly.retriggerMerging=Retrigger merging
 readonly.retriggerFile=Retrigger writing file
-readonly.step1=<strong>Step 1</strong>: Please check your entered values for correctness. \
-  If you encounter a mistake please go <strong>Back & Edit</strong> your submission.
-readonly.step2=<strong>Step 2</strong>: If the data is to your satisfaction, \
-  please click on <strong>Please process my submission</strong> in order to finalize your submission.
+readonly.header.timeout=This page is currently locked for {0} minutes because another user working on this already.
+readonly.header.validate=Please carefully review your information and click <b>{0}</b> to submit your metadata.
+readonly.header.finished=Submission successful. Thank you!
 readonly.merging=<h4><strong>We found samples that will be merged!</strong></h4> \
   <p>This means that samples in this submission have the same naming scheme \
   (the same PID, SAMPLE_TYPE, SEQUENCING_TYPE, ANTIBODY_TARGET and SINGLE_CELL_WELL_LABEL) as other samples in this submission \
@@ -256,6 +255,7 @@ readonly.merging=<h4><strong>We found samples that will be merged!</strong></h4>
   to the data of the samples again, please contact us and we will remove the withdrawn status for those samples.<br> \
   For more information please visit the \
   <a href="https://www.odcf.dkfz.de/supporting-information/withdrawn-samples" target="_blank">ODCF homepage <i class="fas fa-external-link-alt"></i></a></p>
+readonly.merging.checkbox=I understand the impact of merging and chose to trigger the merge fully aware of the implications
 readonly.expectedPath=expected path on the filesystem:
 readonly.summary.contains=Your submission contains:
 readonly.summary.projects=The following projects:
@@ -265,12 +265,17 @@ readonly.summary.antibodyTargets=The following antibody targets:
 readonly.summary.hiddenSamples=Number of stopped samples (can be viewed on the previous page):
 readonly.summary.withdrawn=Number of withdrawn samples from OTP:
 readonly.summary.additionalHeaders=The following additional headers:
-readonly.summary.onHold=Your submission is currently set ON_HOLD by the ODCF service team due to required adjustments. \
+readonly.summary.onHold=Your submission is currently set on hold with comment [{0}] by the ODCF service team due to required adjustments. \
   You will be notified via email when further editing and/or finally submitting of your submission is possible.
+readonly.pidPrefix.danger=Is nearly identical to: 
+readonly.pidPrefix.warning=Is similar to: 
 readonly.info.usesRequestedValues=Your submission contains data which we have to check first. Therefore, your submission cannot be finished yet. \
   We will get in touch with you once this is done.
 readonly.info.notAllFilesReadable=We could not find or do not have access to some files in the specified location. \
   Please make sure that we have read rights to all files. After that you can continue here.
+readonly.info.detectedNearlyIdenticalPid=We have detected at least one nearly identical PID (red triangle). \
+  Please change it to the one used in OTP or contact us if it is really necessary to use the new one.
+
 
 readonly.job.name=Name:
 readonly.job.submitted=Submitted:
